Project

General

Profile

Actions

Bug #55711

closed

mon: race condition between `mgr fail` and MgrMonitor::prepare_beacon()

Added by Radoslaw Zarzynski about 2 years ago. Updated 10 months ago.

Status:
Resolved
Priority:
Normal
Category:
-
Target version:
-
% Done:

100%

Source:
Development
Tags:
backport_processed
Backport:
quincy,pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):


Related issues 2 (0 open2 closed)

Copied to RADOS - Backport #57117: quincy: mon: race condition between `mgr fail` and MgrMonitor::prepare_beacon()ResolvedPatrick DonnellyActions
Copied to RADOS - Backport #59715: pacific: mon: race condition between `mgr fail` and MgrMonitor::prepare_beacon()ResolvedPatrick DonnellyActions
Actions #1

Updated by Radoslaw Zarzynski about 2 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 46318
Actions #2

Updated by Neha Ojha almost 2 years ago

  • Project changed from Ceph to RADOS
Actions #3

Updated by Kefu Chai almost 2 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot almost 2 years ago

  • Copied to Backport #57117: quincy: mon: race condition between `mgr fail` and MgrMonitor::prepare_beacon() added
Actions #5

Updated by Backport Bot almost 2 years ago

  • Tags set to backport_processed
Actions #6

Updated by Patrick Donnelly about 1 year ago

  • Tags deleted (backport_processed)
  • Backport changed from quincy to quincy,pacific
Actions #7

Updated by Patrick Donnelly about 1 year ago

  • Copied to Backport #59715: pacific: mon: race condition between `mgr fail` and MgrMonitor::prepare_beacon() added
Actions #8

Updated by Patrick Donnelly about 1 year ago

  • Tags set to backport_processed
Actions #9

Updated by Konstantin Shalygin 10 months ago

  • Status changed from Pending Backport to Resolved
  • % Done changed from 0 to 100
Actions

Also available in: Atom PDF